# llm-optimization

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: run_benchmark.py
benchmarks-results/Mistral-7B-v0_1/: benchmark_Mistral-7B-v0_1_pytorch_20250318_231701.json
deployment/docker/: Dockerfile.client  Dockerfile.triton  docker-compose.yml  start_triton.sh
deployment/k8s/: triton-deployment.yaml
scripts/: download_model.py
scripts/deployment/: prepare_triton_model.py
scripts/onnx/: convert_to_onnx.py
scripts/quantization/: gptq_quantize.py
